@@ -340,7 +340,7 @@ class ZooMarkTest(TestBase):
     def test_profile_4_expressions(self):
         self.test_baseline_4_expressions()
 
-    @profiling.function_call_count(1442, {'2.4': 1001})
+    @profiling.function_call_count(1347, {'2.4': 1001})
     def test_profile_5_aggregates(self):
         self.test_baseline_5_aggregates()
 
@@ -348,7 +348,7 @@ class ZooMarkTest(TestBase):
     def test_profile_6_editing(self):
         self.test_baseline_6_editing()
 
-    @profiling.function_call_count(3110, {'2.4': 1998})
+    @profiling.function_call_count(2994, {'2.4': 1998})
     def test_profile_7_multiview(self):
         self.test_baseline_7_multiview()
 
