@@ -306,7 +306,7 @@ class ZooMarkTest(TestBase):
     def test_profile_4_expressions(self):
         self.test_baseline_4_expressions()
 
-    @profiling.function_call_count(1426)
+    @profiling.function_call_count(1331)
     def test_profile_5_aggregates(self):
         self.test_baseline_5_aggregates()
 
